syntax = "proto3";

package api.product.v1;

import "google/api/annotations.proto";

option go_package = "ecommerce/ecommerce/api/product/v1;v1";

// ===================================
// Message Definitions
// ===================================

// 商品分类信息
message CategoryInfo {
  uint64 id = 1;
  uint64 parent_id = 2;
  string name = 3;
  uint32 level = 4;
  string icon = 5;
  uint32 sort_order = 6;
  bool is_visible = 7;
}

// 商品SPU信息
message SpuInfo {
  uint64 spu_id = 1;
  uint64 category_id = 2;
  uint64 brand_id = 3;
  string title = 4;
  string sub_title = 5;
  string main_image = 6;
  repeated string gallery_images = 7;
  string detail_html = 8;
  int32 status = 9;
}

// 商品SKU信息
message SkuInfo {
  uint64 sku_id = 1;
  uint64 spu_id = 2;
  string title = 3;
  uint64 price = 4;         // 价格, 单位: 分
  uint64 original_price = 5; // 原价, 单位: 分
  uint32 stock = 6;
  string image = 7;
  map<string, string> specs = 8; // 规格, e.g. {"颜色": "黑色", "容量": "256GB"}
  int32 status = 9;
}


// ===================================
// Service Definition
// ===================================

// 商品服务
service Product {
  // 获取商品分类列表
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/v1/categories"
    };
  }

  // 获取SPU商品详情
  rpc GetSpuDetail(GetSpuDetailRequest) returns (GetSpuDetailResponse) {
    option (google.api.http) = {
      get: "/v1/products/spu/{spu_id}"
    };
  }

  // 批量获取 SKU 信息 (为订单服务等内部调用准备)
  rpc GetSkuInfos(GetSkuInfosRequest) returns (GetSkuInfosResponse) {}

  // 锁定库存 (为订单服务准备)
  rpc LockStock(LockStockRequest) returns (LockStockResponse) {}
}

// --- Request/Response Messages ---

// 获取商品分类列表请求
message ListCategoriesRequest {
  uint64 parent_id = 1; // 父分类ID, 0表示获取顶级分类
}

// 获取商品分类列表响应
message ListCategoriesResponse {
  repeated CategoryInfo categories = 1;
}

// 获取SPU商品详情请求
message GetSpuDetailRequest {
  uint64 spu_id = 1;
}

// 获取SPU商品详情响应
message GetSpuDetailResponse {
  SpuInfo spu = 1;
  repeated SkuInfo skus = 2; // 包含该SPU下的所有SKU
}

message GetSkuInfosRequest {
  repeated uint64 sku_ids = 1;
}

message GetSkuInfosResponse {
  repeated SkuInfo skus = 1;
}

message LockStockItem {
  uint64 sku_id = 1;
  uint32 quantity = 2;
}

message LockStockRequest {
  repeated LockStockItem items = 1;
}

message LockStockResponse {
  // 成功时为空
}